# rmBifrost_gameboyadvance

./: .gitmodules  CMakeLists.txt  buildall.sh  happ_simu_note.txt
gba_emu/: gba_view.c
happ_simulator/: CMakeLists.txt  lv_conf.h  simulator.code-workspace
happ_simulator/main/src/: constants.h  main.c  mouse_cursor_icon.c
lv_gba/gba_emu/: gba_emu.c  gba_retro.c
simulator/: CMakeLists.txt  simulator.code-workspace
simulator/main/src/: main.c  nes_instance.c  nes_instance.h
src/: CMakeLists.txt  bifrost_impl.cpp
src/gui/: boot_screen.cpp  boot_screen.h  gba_instance.cpp  gba_instance.h  happ_instance.c  happ_instance.cpp  happ_instance.h  lv_conf.h  nes_instance.c  nes_instance.h
